; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/mcpwm/mcpwm_basic_config/main/extr_mcpwm_basic_config_example.c_mcpwm_example_config.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/mcpwm/mcpwm_basic_config/main/extr_mcpwm_basic_config_example.c_mcpwm_example_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32, double, double, i8*, i8* }

@.str = private unnamed_addr constant [44 x i8] c"Configuring Initial Parameters of mcpwm...\0A\00", align 1
@MCPWM_UP_COUNTER = common dso_local global i8* null, align 8
@MCPWM_DUTY_MODE_0 = common dso_local global i8* null, align 8
@MCPWM_UNIT_0 = common dso_local global i64 0, align 8
@MCPWM_TIMER_0 = common dso_local global i32 0, align 4
@MCPWM_TIMER_1 = common dso_local global i32 0, align 4
@MCPWM_UP_DOWN_COUNTER = common dso_local global i8* null, align 8
@MCPWM_DUTY_MODE_1 = common dso_local global i8* null, align 8
@MCPWM_TIMER_2 = common dso_local global i32 0, align 4
@CAP0_INT_EN = common dso_local global i32 0, align 4
@CAP1_INT_EN = common dso_local global i32 0, align 4
@CAP2_INT_EN = common dso_local global i32 0, align 4
@ESP_INTR_FLAG_IRAM = common dso_local global i32 0, align 4
@MCPWM = common dso_local global %struct.TYPE_10__** null, align 8
@MCPWM_ACTIVE_RED_FED_FROM_PWMXA = common dso_local global i32 0, align 4
@MCPWM_BYPASS_FED = common dso_local global i32 0, align 4
@MCPWM_BYPASS_RED = common dso_local global i32 0, align 4
@MCPWM_CARRIER_OUT_IVT_EN = common dso_local global i32 0, align 4
@MCPWM_FORCE_MCPWMXA_HIGH = common dso_local global i32 0, align 4
@MCPWM_FORCE_MCPWMXA_LOW = common dso_local global i32 0, align 4
@MCPWM_FORCE_MCPWMXB_HIGH = common dso_local global i32 0, align 4
@MCPWM_FORCE_MCPWMXB_LOW = common dso_local global i32 0, align 4
@MCPWM_HIGH_LEVEL_TGR = common dso_local global i32 0, align 4
@MCPWM_ONESHOT_MODE_EN = common dso_local global i32 0, align 4
@MCPWM_POS_EDGE = common dso_local global i32 0, align 4
@MCPWM_SELECT_CAP0 = common dso_local global i32 0, align 4
@MCPWM_SELECT_CAP1 = common dso_local global i32 0, align 4
@MCPWM_SELECT_CAP2 = common dso_local global i32 0, align 4
@MCPWM_SELECT_F0 = common dso_local global i32 0, align 4
@MCPWM_SELECT_F1 = common dso_local global i32 0, align 4
@MCPWM_SELECT_F2 = common dso_local global i32 0, align 4
@MCPWM_SELECT_SYNC0 = common dso_local global i32 0, align 4
@isr_handler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @mcpwm_example_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mcpwm_example_config(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_8__, align 8
  store i8* %0, i8** %2, align 8
  %4 = call i32 (...) @mcpwm_example_gpio_initialize()
  %5 = call i32 @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 0
  store i32 1000, i32* %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 1
  store double 6.000000e+01, double* %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 2
  store double 5.000000e+01, double* %8, align 8
  %9 = load i8*, i8** @MCPWM_UP_COUNTER, align 8
  %10 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 4
  store i8* %9, i8** %10, align 8
  %11 = load i8*, i8** @MCPWM_DUTY_MODE_0, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 3
  store i8* %11, i8** %12, align 8
  %13 = load i64, i64* @MCPWM_UNIT_0, align 8
  %14 = load i32, i32* @MCPWM_TIMER_0, align 4
  %15 = call i32 @mcpwm_init(i64 %13, i32 %14, %struct.TYPE_8__* %3)
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 0
  store i32 500, i32* %16, align 8
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 1
  store double 4.590000e+01, double* %17, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 2
  store double 7.000000e+00, double* %18, align 8
  %19 = load i8*, i8** @MCPWM_UP_COUNTER, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 4
  store i8* %19, i8** %20, align 8
  %21 = load i8*, i8** @MCPWM_DUTY_MODE_0, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 3
  store i8* %21, i8** %22, align 8
  %23 = load i64, i64* @MCPWM_UNIT_0, align 8
  %24 = load i32, i32* @MCPWM_TIMER_1, align 4
  %25 = call i32 @mcpwm_init(i64 %23, i32 %24, %struct.TYPE_8__* %3)
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 0
  store i32 400, i32* %26, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 1
  store double 2.320000e+01, double* %27, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 2
  store double 9.700000e+01, double* %28, align 8
  %29 = load i8*, i8** @MCPWM_UP_DOWN_COUNTER, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 4
  store i8* %29, i8** %30, align 8
  %31 = load i8*, i8** @MCPWM_DUTY_MODE_1, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 3
  store i8* %31, i8** %32, align 8
  %33 = load i64, i64* @MCPWM_UNIT_0, align 8
  %34 = load i32, i32* @MCPWM_TIMER_2, align 4
  %35 = call i32 @mcpwm_init(i64 %33, i32 %34, %struct.TYPE_8__* %3)
  %36 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i32 @mcpwm_example_gpio_initialize(...) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @mcpwm_init(i64, i32, %struct.TYPE_8__*) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
